Fix: Correct dataset in evaluation script

--- a/eval_metrics.ipynb
+++ b/eval_metrics.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "7f17cf2c",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     "]\n",
     "\n",
     "# 2. LOAD RAW VALIDATION DATA ONCE\n",
-    "raw_eval = load_dataset(\"yelp_review_full\", split=\"test[:20%]\")\n",
+    "raw_eval = load_dataset(\"wikitext\", \"wikitext-2-raw-v1\", split=\"test[:20%]\")\n",
     "raw_eval = raw_eval.filter(lambda x: len(x[\"text\"].strip()) > 0)\n",
     "eval_texts = list(raw_eval[\"text\"])\n",
     "total_chars = sum(len(t) for t in eval_texts)\n",
